src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccessType__c</fullName>
        <label>AccessTypes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOMAIN</fullName>
                </value>
                <value>
                    <fullName>IP_LOGIN</fullName>
                </value>
                <value>
                    <fullName>PASSWORD</fullName>
                </value>
                <value>
                    <fullName>SAML_2</fullName>
                </value>
                <value>
                    <fullName>SHIBBOLETH</fullName>
                </value>
                <value>
                    <fullName>SSO_LINK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingTerms__c</fullName>
        <label>BillingTerms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NET_10</fullName>
                </value>
                <value>
                    <fullName>NET_30</fullName>
                </value>
                <value>
                    <fullName>NET_45</fullName>
                </value>
                <value>
                    <fullName>NET_60</fullName>
                </value>
                <value>
                    <fullName>NET_90</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BookingType__c</fullName>
        <label>BookingType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW_BUSINESS</fullName>
                </value>
                <value>
                    <fullName>UPGRADE</fullName>
                </value>
                <value>
                    <fullName>WINBACK</fullName>
                </value>
                <value>
                    <fullName>WINBACK_UPGRADE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClearingHouse__c</fullName>
        <label>ClearingHouse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GMBH</fullName>
                </value>
                <value>
                    <fullName>INC</fullName>
                </value>
                <value>
                    <fullName>LTD</fullName>
                </value>
                <value>
                    <fullName>PLC</fullName>
                </value>
                <value>
                    <fullName>SARL</fullName>
                </value>
                <value>
                    <fullName>KK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LiableOffice__c</fullName>
        <label>LiableOffice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HAMBURG</fullName>
                </value>
                <value>
                    <fullName>LONDON</fullName>
                </value>
                <value>
                    <fullName>NEW_YORK</fullName>
                </value>
                <value>
                    <fullName>PARIS</fullName>
                </value>
                <value>
                    <fullName>SINGAPORE</fullName>
                </value>
                <value>
                    <fullName>TOKYO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesChannel__c</fullName>
        <label>SalesChannel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WEBINAR</fullName>
                </value>
                <value>
                    <fullName>INBOUND</fullName>
                </value>
                <value>
                    <fullName>BASIC_ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>BAP_MAILING</fullName>
                </value>
                <value>
                    <fullName>DOSSIER</fullName>
                </value>
                <value>
                    <fullName>RESEARCH_REQUEST</fullName>
                </value>
                <value>
                    <fullName>SEAL</fullName>
                </value>
                <value>
                    <fullName>COLD_CALL</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER_VISIT</fullName>
                </value>
                <value>
                    <fullName>STROER</fullName>
                </value>
                <value>
                    <fullName>INDUSTRY_MAILING</fullName>
                </value>
                <value>
                    <fullName>COLD_MAILING</fullName>
                </value>
                <value>
                    <fullName>CONTENT_MARKETING</fullName>
                </value>
                <value>
                    <fullName>COOPERATION</fullName>
                </value>
                <value>
                    <fullName>LINKEDIN</fullName>
                </value>
                <value>
                    <fullName>FAIR</fullName>
                </value>
                <value>
                    <fullName>SPECIAL</fullName>
                </value>
                <value>
                    <fullName>EXISTING_CUSTOMER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesTeam__c</fullName>
        <label>SalesTeam</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACADEMIA</fullName>
                </value>
                <value>
                    <fullName>ACADEMIA_DACH</fullName>
                </value>
                <value>
                    <fullName>ACADEMIA_EU</fullName>
                </value>
                <value>
                    <fullName>ACADEMIC</fullName>
                </value>
                <value>
                    <fullName>ACADEMICS</fullName>
                </value>
                <value>
                    <fullName>AGENCIES</fullName>
                </value>
                <value>
                    <fullName>AGENCIES_MEDIA</fullName>
                </value>
                <value>
                    <fullName>ASIA_PACIFIC,</fullName>
                </value>
                <value>
                    <fullName>AUTOMOTIVE</fullName>
                </value>
                <value>
                    <fullName>BENELUX</fullName>
                </value>
                <value>
                    <fullName>CANADA,</fullName>
                </value>
                <value>
                    <fullName>CHEMICALS_ENERGY,</fullName>
                </value>
                <value>
                    <fullName>CONSULTING,</fullName>
                </value>
                <value>
                    <fullName>CONSUMER_ELECTRONICS,</fullName>
                </value>
                <value>
                    <fullName>ECOMMERCE,</fullName>
                </value>
                <value>
                    <fullName>EASTERN_EUROPE,</fullName>
                </value>
                <value>
                    <fullName>ENTERTAINMENT,</fullName>
                </value>
                <value>
                    <fullName>FINANCE</fullName>
                </value>
                <value>
                    <fullName>FMCG</fullName>
                </value>
                <value>
                    <fullName>FSI</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>IBERIA</fullName>
                </value>
                <value>
                    <fullName>INDUSTRY</fullName>
                </value>
                <value>
                    <fullName>INSURANCE</fullName>
                </value>
                <value>
                    <fullName>ISRAEL</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>ITALY</fullName>
                </value>
                <value>
                    <fullName>IT_TELCO</fullName>
                </value>
                <value>
                    <fullName>LATIN_AMERICA</fullName>
                </value>
                <value>
                    <fullName>LEGAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>